--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ lib/llcookies
 /app/workers/post_worker.rb
 /app/workers/scrape_worker.rb
 /config/development.rb
+/config/secrets.yml
 /config/initializers/secret_token.rb
 /config/database.yml
 /lib/maintenance_module.rb
