--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,6 @@
 # or operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile ~/.gitignore_global
 
-# Ignore bundler config (don't have it anyhow)
-#/.bundle
-
-# Ignore the default SQLite database.
-///db/*.sqlite3
-
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp
@@ -28,12 +22,12 @@ solr/*
 !solr/configsets/sunspot/conf/schema.xml
 
 # Ignore files with sensitive info
-lib/llcookies
+/lib/llcookies
 /app/models/ability.rb
 /app/workers/post_worker.rb
 /app/workers/scrape_worker.rb
+/app/workers/watch_worker.rb
 /config/secrets.yml
-# /config/initializers/secret_token.rb #Doesn't exist anymore
 /config/database.yml
 /doc/maintenance_module.rb
 /doc/fix_module.rb
