added bin files with executable permissions

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 # Ignore public/images
 /public/images/
 
-# Ignore solr files. Note that solr/configsets/sunspot/conf/schema.xml is the exception, since it contains custom n-gram filters
+# Ignore solr files.
 solr/*
 
 # Ignore Rubymine Files
