--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,7 @@ rvm:
  - 2.3.3
 services:
  - mysql
+before_install:
+# mysql: db setup and db config move
+ - cp config/database.travis.yml config/database.yml
+ - mysql -e 'CREATE DATABASE hibiki_test;'
