added neo4j service

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,10 @@ rvm:
  - 2.3.3
 services:
  - mysql
+ - neo4j
 before_install:
-# mysql: db setup and db config move
+ # mysql: db setup and db config move
  - cp config/database.travis.yml config/database.yml
  - mysql -e 'CREATE DATABASE hibiki_test;'
+ # neo4j: copy
+ - cp config/neo4j.travis.yml configt/neo4j.yml
