--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,10 @@ rvm:
 services:
  - mysql
  - neo4j
-script:
- - bundle exec rake db:test:prepare
-before_install:
+#before_install:
+before_script:
  # mysql: db setup and db config move
  - cp config/database.travis.yml config/database.yml
- - mysql -e 'CREATE DATABASE hibiki_test;'
+ - bundle exec rake db:create db:structure:load
  # neo4j: copy
  - cp config/neo4j.travis.yml config/neo4j.yml
