--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: ruby
 rvm:
- - 2.3.3
+- 2.3.3
 services:
- - mysql
- - neo4j
-#before_install:
+- mysql
+- neo4j
 before_script:
- # mysql: db setup and db config move
- - cp config/database.travis.yml config/database.yml
- - bundle exec rake db:create db:structure:load
- # neo4j: copy
- - cp config/neo4j.travis.yml config/neo4j.yml
+- cp config/travis/database.travis.yml config/database.yml
+- bundle exec rake db:create db:structure:load
+- cp config/travis/neo4j.travis.yml config/neo4j.yml
+before_install:
+- openssl aes-256-cbc -K $encrypted_1ce6a5799c45_key -iv $encrypted_1ce6a5799c45_iv
+  -in config/travis/secrets_test.yml.enc -out config/secrets.yml -d
