--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,8 @@ services:
 - mysql
 - neo4j
 before_script:
-- cp config/travis/database.travis.yml config/database.yml
 - bundle exec rake db:create db:structure:load
-- cp config/travis/neo4j.travis.yml config/neo4j.yml
 before_install:
-- openssl aes-256-cbc -K $encrypted_1ce6a5799c45_key -iv $encrypted_1ce6a5799c45_iv
-  -in config/travis/secrets_test.yml.enc -out config/secrets.yml -d
+- cp config/travis/database.travis.yml config/database.yml
+- cp config/travis/neo4j.travis.yml config/neo4j.yml
+- openssl aes-256-cbc -K $encrypted_1ce6a5799c45_key -iv $encrypted_1ce6a5799c45_iv -in config/travis/secrets_test.yml.enc -out config/secrets.yml -d
