--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,5 @@ before_script:
 before_install:
 - cp config/travis/database.travis.yml config/database.yml
 - cp config/travis/neo4j.travis.yml config/neo4j.yml
-- openssl aes-256-cbc -K $encrypted_1ce6a5799c45_key -iv $encrypted_1ce6a5799c45_iv -in config/travis/secrets_test.yml.enc -out config/secrets.yml -d
+- openssl aes-256-cbc -K $encrypted_1ce6a5799c45_key -iv $encrypted_1ce6a5799c45_iv
+  -in config/travis/secrets_test.yml.enc -out config/secrets.yml -d
