--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ services:
 - neo4j
 before_script:
 - bundle exec rake db:create db:structure:load
+- bundle exec rake neo4j:migrate
 before_install:
 - cp config/travis/database.travis.yml config/database.yml
 - cp config/travis/neo4j.travis.yml config/neo4j.yml
