--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,12 @@ rvm:
 services:
 - mysql
 - neo4j
-before_script:
-- ruby bin/setup
 before_install:
 - cp config/travis/database.travis.yml config/database.yml
 - cp config/travis/neo4j.travis.yml config/neo4j.yml
 - cp config/travis/secrets_test.travis.yml config/secrets.yml
+before_script:
+- ruby bin/setup
+script:
+- rspec --fail-fast=5 --force-color
+
