added redis server to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ rvm:
 services:
 - mysql
 - neo4j
+- redis-server
 before_install:
 - cp config/travis/database.travis.yml config/database.yml
 - cp config/travis/neo4j.travis.yml config/neo4j.yml
